--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Fetch googleTest as git submodule
 include(cmake/updateSubmodules.cmake)
 
-include(CTest)
+# include(CTest)
 add_subdirectory(src)
-add_subdirectory(external)
-add_subdirectory(tests)
+# add_subdirectory(external)
+# add_subdirectory(tests)
