--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,3 @@
-include_directories(${CMAKE_SOURCE_DIR}/src/algos)
-include_directories(${CMAKE_SOURCE_DIR}/src/util)
+add_subdirectory(core)
+add_subdirectory(gui)
 
-set(SOURCES
-  main.cpp
-  algos/des.cpp
-  algos/caeser.cpp
-  algos/playfair.cpp
-  algos/aes.cpp
-  util/utility.cpp
-  util/args.cpp
-)
-add_executable(spymaster ${SOURCES})
